Adjusted content-height, now load-more won't go out of screen. Also fixed go-to-top issue, now this is will available from very first render

--- a/src/containers/Chat/ChatConversations/ConversationList/ConversationList.module.css
+++ b/src/containers/Chat/ChatConversations/ConversationList/ConversationList.module.css
@@ -1,11 +1,17 @@
-.ListingContainer {
-  height: calc(100% - 100px);
+.ChatListingContainer {
+  height: calc(100% - 124px);
   overflow-y: auto;
   padding: 0px !important;
 }
 
 .CollectionListingContainer {
   height: 100%;
+  overflow-y: auto;
+  padding: 0px !important;
+}
+
+.SaveSearchListingContainer {
+  height: calc(100% - 96px);
   overflow-y: auto;
   padding: 0px !important;
 }
@@ -56,7 +62,7 @@
   background-color: #073f24;
   font-weight: 500;
   padding: 1px 8px;
-  margin: 20px auto 0px auto;
+  margin: 0 auto;
   border-radius: 0 0 12px 12px;
   color: #edf6f2;
   cursor: pointer;
@@ -68,7 +74,7 @@
 
 .ScrollToTopContacts {
   composes: ScrollButton;
-  top: 88px;
+  top: 110px;
 }
 
 .ScrollToTopCollections {
